--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a class="menu-item active list link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="menu-item active list link" href="./portfolio.html">Portfolio</a>
+            <a class="menu-item underline active list link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a class="menu-item active list link" href="">Contacts</a>
@@ -60,8 +60,12 @@
       <div class="container">
         <ul class="services-list list flex-box">
           <li class="services-list-item">
-            <a class="link" href="">
-              <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
+                <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360">
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Banking App Interface Concept</h2>
                 <p class="text-dsc">App</p>
@@ -69,8 +73,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Cashless Payment</h2>
                 <p class="text-dsc">Marketing</p>
@@ -78,8 +86,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/maditaionapp.jpg" alt="Meditaion App" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Meditation App</h2>
                 <p class="text-dsc">App</p>
@@ -87,8 +99,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Taxi Service</h2>
                 <p class="text-dsc">Marketing</p>
@@ -96,8 +112,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/screenillustrations.jpg" alt="Screen Illustrations" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Screen Illustrations</h2>
                 <p class="text-dsc">Design</p>
@@ -105,8 +125,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Online Courses</h2>
                 <p class="text-dsc">Marketing</p>
@@ -114,8 +138,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/instagramstories.jpg" alt="Instagram Stories Concept" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Instagram Stories Concept</h2>
                 <p class="text-dsc">Design</p>
@@ -123,8 +151,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/organicfood.jpg" alt="Organic Food" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Organic Food</h2>
                 <p class="text-dsc">Web Site</p>
@@ -132,8 +164,12 @@
             </a>
           </li>
           <li class="services-list-item">
-            <a class="link" href="">
+            <a class="link overlay-img" href="">
+              <div class="service-img">
               <img src="./images/freshcoffe.jpg" alt="Fresh Coffee" width="360">
+               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="cards-text">
                 <h2 class="secondary-title-cards">Fresh Coffee</h2>
                 <p class="text-dsc">Web Site</p>
