--- a/index.html
+++ b/index.html
@@ -279,42 +279,42 @@
         <div class="container">
           <h2 class="primary-title">Customers</h2>
           <ul class="customers-list list">
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-li">
               <a href="" class="customers-item">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons1c.svg#icon-client6"></use>
